--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 us_2024_news.csv/
 us_2024_news_sampled/
 1. Data Retrieval and Processing of News and Stock Prices/sentiment_sampled_processed/
+1. Data Retrieval and Processing of News and Stock Prices/sampling/final_sample_processed_with_pageRank.csv
